--- a/index.html
+++ b/index.html
@@ -134,6 +134,6 @@
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" context="module" src="/index.tsx"></script>
   </body>
 </html>
