refactor: Update project branding and remove Vite build dependencies
This commit refactors the project to reflect updated branding and removes build dependencies associated with Vite. The project now uses a static file server for development and deployment, simplifying the build process for this landing page.

Key changes include:
- Updating the alliance name from "BBB × Cleopatra" to "BBB + Cleopatra".
- Removing Vite and its associated plugins from `package.json`.
- Adjusting script commands in `package.json` to reflect static serving.
- Updating the `index.html` meta tags with the new branding.
- Modifying table headers and mobile view labels in `MarketAnalysis.tsx` to use the new alliance name.
- Implementing concise formatting for financial headers in `ProjectManagement.tsx`.
- Streamlining the mobile navigation links in `Header.tsx`.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       "description": "A landing page for the comprehensive business plan of the Palawan Integrated Tourism, Investment & Infrastructure Ecosystem, a balanced alliance between Cleopatra SIRV Holdings Inc. and Binga Beach Brothers Inc.",
       "mainEntity": {
         "@type": "Organization",
-        "name": "Cleopatra SIRV × Binga Beach Brothers",
+        "name": "Cleopatra SIRV + Binga Beach Brothers",
         "description": "A balanced alliance delivering real-world assets in Palawan: eco-villas & resort ops, farm-to-table agriculture, hardware & construction supply, and compliant structures with transparent reporting.",
         "logo": "/logos/binga-beach-logo.png",
         "address": {
@@ -59,7 +59,7 @@
       },
       "publisher": {
         "@type": "Organization",
-        "name": "Cleopatra SIRV × Binga Beach Brothers",
+        "name": "Cleopatra SIRV + Binga Beach Brothers",
         "logo": {
           "@type": "ImageObject",
           "url": "/logos/binga-beach-logo.png"
